[tool.poetry]
name = "mamamia"
version = "0.1.0"
description = ""
authors = ["oleh_kost <oleh.kostashchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
